# dddWorkFlow

./: .gitignore  README.md
docs/: README.md
projects/: README.md
projects/algorithms/: CMakeLists.txt  Makefile
projects/algorithms/binary_tree/: binary_tree.cpp
projects/algorithms/dynamic_programming/: CMakeLists.txt
projects/algorithms/linked_list/: linked_list.cpp
projects/algorithms/sorting/: sort.cpp
projects/algorithms/utils/: data_structures.h
resources/: README.md
resume/: README.md  resume.md
resume/templates/: resume.md  resume_english.md
scripts/: README.md
